--- a/source/assets/Registration/css/registration.css
+++ b/source/assets/Registration/css/registration.css
@@ -1,265 +1,257 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
 section {
-  position: relative;
-  min-height: 100vh;
-  background: linear-gradient(
-    109.5deg,
-    rgba(76, 221, 242, 1) 11.2%,
-    rgba(92, 121, 255, 1) 91.1%
-  );
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
+	position: relative;
+	min-height: 100vh;
+	background: linear-gradient(109.5deg, rgba(76, 221, 242, 1) 11.2%, rgba(92, 121, 255, 1) 91.1%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
 }
 
 section .container {
-  position: relative;
-  width: 850px;
-  height: 500px;
-  background: rgb(255, 255, 255);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
-    0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  border-radius: 4px;
+	position: relative;
+	width: 850px;
+	height: 500px;
+	background: rgb(255, 255, 255);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16),
+		0 8px 8px rgba(0, 0, 0, 0.2);
+	overflow: hidden;
+	border-radius: 4px;
 }
 
 section .container .user {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
 }
 
 section .container .user .imgBx {
-  position: relative;
-  width: 50%;
-  height: 100%;
-  transition: 0.5s;
+	position: relative;
+	width: 50%;
+	height: 100%;
+	transition: 0.5s;
 }
 
 section .container .user .imgBx img {
-  position: absolute;
-  top: 0;
-  left: 20px;
-  width: 90%;
-  height: 100%;
+	position: absolute;
+	top: 0;
+	left: 20px;
+	width: 90%;
+	height: 100%;
 }
 
 section .container .user .formBx {
-  position: relative;
-  width: 50%;
-  height: 100%;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px;
-  transition: 0.5s;
+	position: relative;
+	width: 50%;
+	height: 100%;
+	background: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 40px;
+	transition: 0.5s;
 }
 
 section .container .user .formBx form h2 {
-  font-size: 35px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  text-align: center;
-  width: 100%;
-  margin-bottom: 20px;
-  background-image: linear-gradient( 135deg, #52E5E7 10%, #130CB7 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+	font-size: 35px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	text-align: center;
+	width: 100%;
+	margin-bottom: 20px;
+	background-image: linear-gradient(135deg, #52e5e7 10%, #130cb7 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 section .container .user .formBx form input {
-  position: relative;
-  width: 100%;
-  padding: 10px;
-  background: #f5f5f5;
-  color: #000;
-  border: none;
-  outline: none;
-  box-shadow: none;
-  margin: 8px 0;
-  font-size: 14px;
-  letter-spacing: 1px;
-  font-weight: 400;
-  font-size: 13px;
-  border-radius: 3px;
+	position: relative;
+	width: 100%;
+	padding: 10px;
+	background: #f5f5f5;
+	color: #000;
+	border: none;
+	outline: none;
+	box-shadow: none;
+	margin: 8px 0;
+	font-size: 14px;
+	letter-spacing: 1px;
+	font-weight: 400;
+	font-size: 13px;
+	border-radius: 3px;
 }
 
 section .container .user .formBx form .login_btn,
 section .container .signupBx .formBx form .logup_btn {
-  padding: 12px 60px;
-  background: #fff;
-  cursor: pointer;
-  font-size: 13px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  transition: 0.5s;
-  color: #111;
-  text-transform: uppercase;
-  border: 1px solid rgba(150, 147, 147, 0.274);
-  border-radius: 1px;
-  margin-top: 20px;
+	padding: 12px 60px;
+	background: #fff;
+	cursor: pointer;
+	font-size: 13px;
+	font-weight: 600;
+	letter-spacing: 1px;
+	transition: 0.5s;
+	color: #111;
+	text-transform: uppercase;
+	border: 1px solid rgba(150, 147, 147, 0.274);
+	border-radius: 4px;
+	margin-top: 20px;
 }
 
 section .container .user .formBx form .login_btn:hover,
 section .container .signupBx .formBx form .logup_btn:hover {
-  background: linear-gradient(
-    103deg,
-    rgba(137, 247, 234, 1) 7.3%,
-    rgba(102, 117, 241, 1) 100.2%
-  );
-  color: rgba(255, 255, 255, 0.911);
+	background: linear-gradient(103deg, rgba(137, 247, 234, 1) 7.3%, rgba(102, 117, 241, 1) 100.2%);
+	color: rgba(255, 255, 255, 0.911);
 }
 
 section .container .user .formBx form .signup {
-  position: relative;
-  margin-top: 20px;
-  font-size: 12px;
-  letter-spacing: 1px;
-  color: #555;
-  font-weight: 300;
+	position: relative;
+	margin-top: 20px;
+	font-size: 12px;
+	letter-spacing: 1px;
+	color: #555;
+	font-weight: 300;
 }
 
 section .container .user .formBx form .signup a {
-  font-weight: 600;
-  font-size: 14px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #228bec;
-  cursor: pointer;
+	font-weight: 600;
+	font-size: 14px;
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #228bec;
+	cursor: pointer;
 }
 
 section .container .signupBx {
-  pointer-events: none;
+	pointer-events: none;
 }
 
 section .container.active .signupBx {
-  pointer-events: initial;
+	pointer-events: initial;
 }
 
 section .container .signupBx .formBx {
-  left: 100%;
-  transition: 0.5s;
+	left: 100%;
+	transition: 0.5s;
 }
 
 section .container.active .signupBx .formBx {
-  left: 0;
-  transition: 0.5s;
+	left: 0;
+	transition: 0.5s;
 }
 
 section .container .signupBx .imgBx {
-  left: -100%;
-  transition: 0.5s;
+	left: -100%;
+	transition: 0.5s;
 }
 
 section .container.active .signupBx .imgBx {
-  left: 0;
-  transition: 0.5s;
+	left: 0;
+	transition: 0.5s;
 }
 
 section .container .signinBx .formBx {
-  left: 0;
-  transition: 0.5s;
+	left: 0;
+	transition: 0.5s;
 }
 
 section .container.active .signinBx .formBx {
-  left: 100%;
-  transition: 0.5s;
+	left: 100%;
+	transition: 0.5s;
 }
 
 section .container .signinBx .imgBx {
-  left: 0;
-  transition: 0.5s;
+	left: 0;
+	transition: 0.5s;
 }
 
 section .container.active .signinBx .imgBx {
-  left: -100%;
-  transition: 0.5s;
+	left: -100%;
+	transition: 0.5s;
 }
 
 .social {
-  position: absolute;
-  text-align: center;
-  max-width: 100%;
-  align-items: center;
-  padding-top: 8px;
+	position: absolute;
+	text-align: center;
+	max-width: 100%;
+	align-items: center;
+	padding-top: 8px;
 }
 
 .social a {
-  color: #313131;
-  text-decoration: none;
-  display: inline-block;
-  margin: 0 12px;
-  transition: all 0.8s ease;
+	color: #313131;
+	text-decoration: none;
+	display: inline-block;
+	margin: 0 12px;
+	transition: all 0.8s ease;
 }
 
 .social a:hover:nth-child(1) {
-  color: #dd4b39;
-  transition: all 0.5s ease;
+	color: #dd4b39;
+	transition: all 0.5s ease;
 }
 
 .social a:hover:nth-child(2) {
-  color: #1877f2;
-  transition: all 0.5s ease;
+	color: #1877f2;
+	transition: all 0.5s ease;
 }
 
 .social a:hover:nth-child(3) {
-  color: #1da1f2;
-  transition: all 0.5s ease;
+	color: #1da1f2;
+	transition: all 0.5s ease;
 }
 
 .social a:hover:nth-child(4) {
-  color: #134465;
-  transition: all 0.5s ease;
+	color: #134465;
+	transition: all 0.5s ease;
 }
 
 span {
-  position: absolute;
-  right: 55px;
-  transform: translate(0, -50%);
-  top: 50%;
-  cursor: pointer;
+	position: absolute;
+	right: 55px;
+	transform: translate(0, -50%);
+	top: 50%;
+	cursor: pointer;
 }
 
 .eye-class {
-  position: absolute;
-  right: 55px;
-  transform: translate(0, -50%);
-  top: 55%;
-  cursor: pointer;
+	position: absolute;
+	right: 55px;
+	transform: translate(0, -50%);
+	top: 59%;
+	cursor: pointer;
 }
 
 span #eye {
-  color: #86868f;
-  font-size: 13px;
+	color: #86868f;
+	font-size: 13px;
 }
 
 .eye-class #eye1 {
-  color: #86868f;
-  font-size: 13px;
+	color: #86868f;
+	font-size: 13px;
 }
 
 @media (max-width: 990px) {
-  section .container {
-    max-width: 400px;
-  }
-  section .container .imgBx {
-    display: none;
-  }
-  section .container .user .formBx {
-    width: 100%;
-  }
+	section .container {
+		max-width: 400px;
+	}
+	section .container .imgBx {
+		display: none;
+	}
+	section .container .user .formBx {
+		width: 100%;
+	}
 }
