registration page updated

--- a/source/templates/registration/registration.html
+++ b/source/templates/registration/registration.html
@@ -115,14 +115,14 @@
                 id="pass_word1"
                 required=""
               />
-              <span class="eye-class"
+<!--               <span class="eye-class"
                 ><i
                   class="fa fa-eye"
                   aria-hidden="true"
                   id="eye1"
                   onclick="revel()"
                 ></i
-              ></span>
+              ></span> -->
               <button class="logup_btn">Sign up</button>
               <p class="signup">
                 Already have an account? <a onclick="toggleForm();">Sign in</a>
