new changes added

--- a/source/templates/Master/algo_menu.html
+++ b/source/templates/Master/algo_menu.html
@@ -36,7 +36,7 @@
             <ul class="navigation">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="" class="active">Menu</a></li>
-                <li class="block"><a href="/source/templates/registration/registration.html"><span>Logout</span></a></li>
+                <li class="block"><a href=""><span>Login</span></a></li>
                 <!-- <li class="none"><a href="#"><span>Logout</span></a></li> -->
             </ul>
         </header>
