new changes added

--- a/source/templates/Master/algorithms/merge_sort.html
+++ b/source/templates/Master/algorithms/merge_sort.html
@@ -56,8 +56,8 @@
         <li><a href="/source/templates/Master/algo_menu.html">Menu</a></li>
         <li><a href="" class="active">Container</a></li>
         <li class="block">
-          <a href="/source/templates/registration/registration.html"
-            ><span>Logout</span></a
+          <a href="#"
+            ><span>Login</span></a
           >
         </li>
         <!-- <li class="none"><a href="#"><span>Logout</span></a></li> -->
