--- a/source/templates/Master/algorithms/quick_sort.html
+++ b/source/templates/Master/algorithms/quick_sort.html
@@ -46,7 +46,7 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="/source/templates/Master/algo_menu.html">Menu</a></li>
         <li><a href=""  class="active">Container</a></li>
-        <li class="block"><a href="/source/templates/registration/registration.html"><span>Logout</span></a></li>
+        <li class="block"><a href="#"><span>Login</span></a></li>
         <!-- <li class="none"><a href="#"><span>Logout</span></a></li> -->
       </ul>
     </header>
