--- a/source/templates/Master/algorithms/insertion_sort.html
+++ b/source/templates/Master/algorithms/insertion_sort.html
@@ -46,8 +46,13 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="/source/templates/Master/algo_menu.html">Menu</a></li>
         <li><a href=""  class="active">Container</a></li>
-        <li class="block"><a href="#"><span>Login</span></a></li>
-        <!-- <li class="none"><a href="#"><span>Logout</span></a></li> -->
+        <li class="logged-in" style="display: none">
+					<a
+						href="/source/templates/registration/login.html"
+						id="logout"
+						><span class="sign">Logout</span></a
+					>
+				</li>
       </ul>
     </header>
 
@@ -219,6 +224,14 @@
         $("html, body").animate({ scrollTop: 0 }, "300");
       });
     </script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="https://www.gstatic.com/firebasejs/8.2.0/firebase.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
+
+		<!--=========================== js file ===================================== -->
+		<script src="/source/assets/Registration/js/login.js"></script>
+		<script src="/source/assets/Master/js/index.js"></script>
 
     <!--=========================== Animate on scroll js file=========================== -->
 
